@@ -116,7 +116,8 @@ package lu.fisch.structorizer.parsers;
  *      Kay Gürtzig     2022-08-11      Issue #1057: LENGTH OF operator is now converted to a symbolic sizeof() call
  *                                      Bugfix #1058: Handling of negated condition names revised
  *      Kay Gürtzig     2022-08-14      Bugfix #851/3: Float literals without digit left of the decimal point enabled
- *      Kay Gürtzig     2022-08-15      Bugfix #1059: Complete redesign of transformCondition()
+ *      Kay Gürtzig     2022-08-15      Bugfix #1059: Complete redesign of transformCondition();
+ *                                      Issue #1064: Pseudo-Calls marking paragraphs and sections now permanently disabled
  *
  ******************************************************************************************************
  *
@@ -5914,7 +5915,10 @@ public class COBOLParser extends CodeParser
 
 			// add to NSD
 			Call sec = new Call(name);
-			sec.setDisabled(true);
+			// START KGU#1055 2022-08-16: Issue #1064 Now permanently disabled via Java import mechanism
+			//sec.setDisabled(true);
+			sec.isMethodDeclaration = true;
+			// END KGU#1055 202208-16
 			_parentNode.addElement(this.equipWithSourceComment(sec, _reduction));
 			sec.getComment().insert("Definition of section " + name, 0);
 
@@ -5934,7 +5938,10 @@ public class COBOLParser extends CodeParser
 
 			// add to NSD
 			Call par = new Call(name);
-			par.setDisabled(true);
+			// START KGU#1055 2022-08-16: Issue #1064 Now permanently disabled via Java import mechanism
+			//par.setDisabled(true);
+			par.isMethodDeclaration = true;
+			// END KGU#1055 202208-16
 			_parentNode.addElement(this.equipWithSourceComment(par, _reduction));
 			par.getComment().insert("Definition of paragraph " + name, 0);
 
